# dioxus-web-component

./: .gitignore  Cargo.toml  README.md  justfile  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml
dioxus-web-component/: CHANGELOG.md  Cargo.toml  README.md
dioxus-web-component-macro/: CHANGELOG.md  Cargo.toml  README.md
dioxus-web-component-macro/src/: attribute.rs  doc.md  event.rs  lib.rs  parameter.rs  properties.rs  tag.rs  web_component.rs
dioxus-web-component-macro/src/snapshots/: dioxus_web_component_macro__tests__should_parse_multiple_events.snap  dioxus_web_component_macro__web_component__tests__should_parse_attributes_args_with_error.snap
dioxus-web-component-macro/tests/: annotation_style.rs  trybuild_tests.rs
dioxus-web-component-macro/tests/assets/failures/: invalid_attribute.rs  invalid_attribute.stderr  invalid_tag_missing_hyphen.rs  invalid_tag_missing_hyphen.stderr  invalid_tag_upper_case.rs  invalid_tag_upper_case.stderr
dioxus-web-component-macro/tests/assets/success/: basic_annotation.rs  full_annotation.rs  no_annotation.rs
dioxus-web-component/src/: event.rs  lib.js  lib.rs  rust_component.rs  shim.js  style.rs
examples/counter/: Cargo.toml  README.md  index.html  index.js  style.css
examples/counter/src/: lib.rs
examples/dx-in-dx/: Cargo.toml  Dioxus.toml  README.md  test.rs
examples/dx-in-dx/assets/: main.css
examples/dx-in-dx/src/: lib.rs  link.css  main.rs
examples/greeting/: Cargo.toml  README.md  index.html  index.js
examples/greeting/src/: lib.rs  style.css
