[workspace]
members = [
  "dioxus-web-component",
  "dioxus-web-component-macro",
  "examples/counter",
  "examples/dx-in-dx",
  "examples/greeting",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["ilaborie@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ilaborie/dioxus-web-component"
rust-version = "1.75.0"

[workspace.dependencies]
# dioxus = "0.5.6"
# dioxus = "=0.6.0-alpha.2"
dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = "0.3.69"
syn = "2.0.72"
quote = "1.0.36"
proc-macro2 = "1.0.86"
darling = "0.20.10"
heck = "0.5.0"
futures-util = { version = "0.3.30", default-features = false }
# tracing = "0.1.40"
# wasm-tracing = "0.2.1"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

undocumented_unsafe_blocks = "deny"

dbg_macro = "warn"
expect_used = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
large_include_file = "warn"
min_ident_chars = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
unnecessary_safety_doc = "warn"
unwrap_used = "warn"

module_name_repetitions = "allow"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
