[package]
name = "dioxus-web-component-macro"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

description = "dioxus-web-component proc macro"
categories = ["gui", "wasm", "web-programming"]
keywords = ["dioxus", "web-component", "wasm"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
dioxus = { workspace = true, default-features = true, features = ["web"] }
dioxus-web-component = { path = "../dioxus-web-component" }
serde = "1.0.194"
trybuild = { version = "1.0.93", features = ["diff"] }

[lints]
workspace = true
