[package]
name = "dioxus-web-component-macro"
version = "0.2.1"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

documentation = "https://docs.rs/dioxus-web-component-macro"
description = "dioxus-web-component proc macro"
categories = ["gui", "wasm", "web-programming"]
keywords = ["dioxus", "web-component", "wasm"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
assert2 = "0.3.14"
dioxus = { workspace = true, default-features = true, features = ["web"] }
dioxus-web-component = { path = "../dioxus-web-component" }
rstest = { version = "0.19.0", default-features = false }
serde = "1.0.194"
trybuild = { version = "1.0.93", features = ["diff"] }

[lints]
workspace = true
