[package]
name = "dioxus-web-component"
version = "0.3.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

documentation = "https://docs.rs/dioxus-web-component"
description = "Expose a Dioxus component as a Web Component"
categories = ["gui", "wasm", "web-programming"]
keywords = ["dioxus", "web-component", "wasm"]
readme = "README.md"

[features]
default = ["macros"]

macros = ["dep:dioxus-web-component-macro"]

[dependencies]
dioxus = { workspace = true, default-features = true, features = ["web"] }
dioxus-web-component-macro = { version = "0.3.0", path = "../dioxus-web-component-macro", optional = true }
futures-channel = { workspace = true }
futures-util = { version = "0.3.30", default-features = false }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4.42"

[dependencies.web-sys]
workspace = true
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "CustomEvent",
  "ShadowRoot",
]

[lints]
workspace = true
