[package]
name = "dioxus-web-component"
version = "0.3.3"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

documentation = "https://docs.rs/dioxus-web-component"
description = "Expose a Dioxus component as a Web Component"
categories = ["gui", "wasm", "web-programming"]
keywords = ["dioxus", "web-component", "wasm"]
readme = "README.md"

[features]
default = ["macros"]

macros = ["dep:dioxus-web-component-macro"]

[dependencies]
dioxus = { workspace = true, features = ["web", "logger"] }
dioxus-web = "0.6.1"
dioxus-web-component-macro = { version = "0.3.3", path = "../dioxus-web-component-macro", optional = true }
futures = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "CustomEvent",
  "ShadowRoot",
]

[lints]
workspace = true
