[package]
name = "greeting"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

description = "Greeting web component example"
keywords = ["dioxus", "web-component", "wasm"]
categories = ["wasm", "web-programming"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus = { workspace = true, features = ["web"] }
dioxus-web-component = { path = "../../dioxus-web-component" }
gloo = { workspace = true, default-features = false, features = ["console"] }
wasm-bindgen = { workspace = true }

[lints]
workspace = true
